@@ -1,5 +1,6 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: update osgideps.pl (#466111).
     - jbj: create absoluabsolute file paths index in rpmdb.
     - jbj: fix: he->tag was returning RPMTAG_BASENAMES, not RPMTAG_FILEPATHS.
     - proyvind: install rpmbuild.h & rpmspec.h on system again (needed by urpmi).
